Bug 1522358 - Requery VRDisplayHost from VRManagers instead of using weakptr from the hash table. r=kip

Differential Revision: https://phabricator.services.mozilla.com/D24584